css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  font: normal 100%/1.3 "", sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

img {
  width: 100%;
  display: block;
}

/* ----- =Header ----- */

.masthead {
  background-color: #242739;
  padding: 1rem;
  box-shadow: 0px 1px 5px #888;
  overflow: hidden;
}

.masthead h1 {
  float: right;
  width: 2rem;
  margin: 0;
}

.main-logo {
  box-shadow: 1px 1px 5px #222;
}

.masthead .nav-label {
  cursor: pointer;
}

.masthead .nav-label img {
  width: 2rem;
}

.nav-check {
  position: absolute;
  left: -100rem;
}

/* ----- =Main ----- */

body > main {
  padding: 1rem;
}

.user-card {
  background-color: #f2f2f2;
  border-radius: 5px;
  overflow: hidden;
}

.user-card header {
  position: relative;
}

.user-label {
  width: 100%;
  position: absolute;
  bottom: 0;
  background: linear-gradient(to top, rgba(0, 0, 0, .75), rgba(0, 0, 0, 0));
}

.user-label div {
  float: left;
  padding: 1rem .5rem 1rem 1rem;
  width: 30%;
}

.user-label div:last-child {
  width: 70%;
  padding: 2rem 1rem 1rem .5rem;
}

.user-label .user-pp {
  border: 1.5px solid #f2f2f2;
  /*border-radius: 10000px;*/
}

.user-label h2 {
  margin: 0;
  color: #f2f2f2;
  font-weight: normal;
}

.user-card main {
  padding: 1rem;
}

.user-card nav {
  overflow: hidden;
  margin: 0 0 1rem;
}

.user-card nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.user-card nav li {
  float: left;
  width: 33%;
  text-align: left;
}

.user-card nav li:nth-child(2) {
  text-align: center;
}

.user-card nav li:last-child {
  text-align: right;
}

.user-card nav a {
  color: #1a1a1a;
  background-color: #e6e6e6;
  display: inline-block;
  width: calc(100% - .666rem);
  text-align: center;
  padding: 1rem 0;
  text-decoration: none;
}

.user-card nav a:hover {
  background-color: #999;
  color: #f2f2f2;
}

.user-card .user-card-bio {
  width: 100%;
  height: 4rem;
  background-color: #e6e6e6;
}

/* ----- =Footer ----- */

.mastfoot {
  width: 100%;
  height: 4rem;
  background-color: #1a1a1a;
}

